--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=citycab
+
+#DB Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/citycab?useSSL=false
+
+spring.datasource.username=postgres
+spring.datasource.password=Vish@1234
+
+# Hibernate Properties for Postgres Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Show the SQL Queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
