--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.application.name=citycab
+spring.application.name=CityCab
+
+# Postgres driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 #DB Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/citycab?useSSL=false
@@ -7,10 +10,29 @@ spring.datasource.username=postgres
 spring.datasource.password=Vish@1234
 
 # Hibernate Properties for Postgres Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Show the SQL Queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
+# Base API Path
+server.servlet.context-path=/api
+# Base path for the REST API
+#spring.data.rest.base-path=/api
+
+
+# Disable the Spring Boot banner
+spring.main.banner-mode=off
+
+# Reduce logging level. Set logging level to warn
+#logging.level.root=off
+
+# Set the logging level for Hibernate to show SQL statements
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Set the logging level for Spring Data JPA to show repository methods
+#logging.level.org.springframework.data=DEBUG
