--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=CityCab
 
 # Postgres driver
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 #DB Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/citycab?useSSL=false
 
 spring.datasource.username=postgres
 spring.datasource.password=Vish@1234
+
+
 
 # Hibernate Properties for Postgres Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -17,9 +19,13 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# take dummy data from data.sql
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 
 # Base API Path
-server.servlet.context-path=/api
+server.servlet.context-path=/api    
 # Base path for the REST API
 #spring.data.rest.base-path=/api
 
