--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -13,16 +13,16 @@ spring.datasource.password=Vish@1234
 
 # Hibernate Properties for Postgres Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Show the SQL Queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # take dummy data from data.sql
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
 
 # Base API Path
 server.servlet.context-path=/api
