Add Ride Manager whenever any other distance calculate service down it will switch to other Third Partty API

--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -1,23 +1,14 @@
 spring.application.name=CityCab
-
-# Postgres driver
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
 #DB Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/citycab?useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DATABASE}?useSSL=false
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
-spring.datasource.username=postgres
-spring.datasource.password=Vish@1234
-
-
-
-# Hibernate Properties for Postgres Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Show the SQL Queries
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # take dummy data from data.sql
 spring.jpa.defer-datasource-initialization=true
@@ -26,19 +17,12 @@ spring.sql.init.data-locations=classpath:data.sql
 
 # Base API Path
 server.servlet.context-path=/api
-# Base path for the REST API
-#spring.data.rest.base-path=/api
-
 
 # Disable the Spring Boot banner
 spring.main.banner-mode=off
 
-# Reduce logging level. Set logging level to warn
+# Geoapify API Key
+here.routing.api.key=${HERE_ROUTING_API_KEY}
+
+# Logging Configuration
 #logging.level.root=off
-
-# Set the logging level for Hibernate to show SQL statements
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql=TRACE
-
-# Set the logging level for Spring Data JPA to show repository methods
-#logging.level.org.springframework.data=DEBUG
