Add Spring security

--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -4,25 +4,28 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${DATABASE}?useSSL=false
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Show the SQL Queries
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # take dummy data from data.sql
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
-
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
 # Base API Path
+
 server.servlet.context-path=/api
 
-# Disable the Spring Boot banner
-spring.main.banner-mode=off
+deploy.env = development
+
+# JWT Configurations
+jwt.secretKey=${JWT_SECRET_KEY}
 
 # Geoapify API Key
 here.routing.api.key=${HERE_ROUTING_API_KEY}
 
 # Logging Configuration
+spring.main.banner-mode=off
 #logging.level.root=off
