Complete the security part in citycab

--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -4,19 +4,22 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${DATABASE}?useSSL=false
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Show the SQL Queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # take dummy data from data.sql
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
-#spring.sql.init.data-locations=classpath:data.sql
-# Base API Path
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 
+# Base API Path
 server.servlet.context-path=/api
+
+# Spring Data Rest Base Path ()
+#spring.data.rest.base-path=/restrepo
 
 deploy.env = development
 
