Set up the email support

--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -29,6 +29,16 @@ jwt.secretKey=${JWT_SECRET_KEY}
 # Geoapify API Key
 here.routing.api.key=${HERE_ROUTING_API_KEY}
 
+
+#smtp config
+spring.mail.username=${MAIL_USERNAME}
+# don't use gmail password, otherwise some security issues will be there
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Logging Configuration
 spring.main.banner-mode=off
 #logging.level.root=off
