changes in vehicle and driver entities

--- a/citycab/src/main/resources/application.properties
+++ b/citycab/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # take dummy data from data.sql
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.data-locations=classpath:dev_data.sql
+#spring.sql.init.data-locations=classpath:data.sql
+#spring.sql.init.data-locations=classpath:testdata.sql
 
 # Base API Path
 server.servlet.context-path=/api
